syntax = "proto3";
package antidote.api.exp;
option go_package = ".;antidote_api_exp";

import "google/api/annotations.proto";

service CollectionService {

  rpc ListCollections(CollectionFilter) returns (Collections) {
    option (google.api.http) = {
      get: "/exp/collection"
    };
  }

  rpc GetCollection(CollectionSlug) returns (Collection) {
    option (google.api.http) = {
      get: "/exp/collection/{slug}"
    };
  }

}

message CollectionFilter {}

message Collections {
  repeated Collection collections = 1;
}

message CollectionSlug {
  string slug = 1;
}

message LessonSummary {
  string Slug = 1;
  string Name = 2;
  string Description = 3;
}

message Collection {
  string Slug = 1;
  string Title = 2;
  string Image = 3;
  string Website = 4;
  string ContactEmail = 5;

  // Why should users view your collection?
  string BriefDescription = 6;

  // Why should users continue and view your lessons?
  string LongDescription = 7;

  string Type = 8;
  string Tier = 9;
  string CollectionFile = 10;

  repeated LessonSummary Lessons = 11;
}
